poster: fix partially hidden icon due to overflow

--- a/src/plugins/poster/public/poster.scss
+++ b/src/plugins/poster/public/poster.scss
@@ -22,7 +22,6 @@
 
   .play-wrapper[data-poster] {
     position: absolute;
-    overflow: hidden;
     width: 100%;
     height: 20%;
     line-height: 100%;
